fix font size on mobile

--- a/css.css
+++ b/css.css
@@ -123,7 +123,7 @@ ul{
 }
 
 @media screen and (max-width: 992px) {
-  p, a{
+  p, a, li{
     font-size: 15px;
   }
   .title>p{
